# ot-harjoitustyo

./: .README.md.swp  .gitignore  README.md
dokumentaatio/: vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
yatzy/: vaatimusmaarittely.md
yatzy-app/: .coveragerc  .gitignore  .pylintrc  pyproject.toml  tasks.py
yatzy-app/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md  vaatimusmaarittely.md.save
yatzy-app/dokumentaatio/kuvat/: aloitusnaytto.png~  ekakierros.png~  pistetilanne.png~  tokakierros.png~  varattu.png~
yatzy-app/src/: connect_database.py  database.sqlite  index.py  initialize_database.py  players.py
yatzy-app/src/entities/: player.py
yatzy-app/src/repositories/: player_repository.py
yatzy-app/src/services/: board.py  dice.py  player_service.py  roll_dice.py
yatzy-app/src/tests/: entity_test.py  repository_test.py  service_test.py  ui_test.py
yatzy-app/src/ui/: add_player_view.py  board_view.py  choose_player.py  dice_view.py  index_view.py  play_view.py  players_view.py  top_score_view.py  ui.py
